Add basic html structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fontawesome.com/icons/futbol?f=classic&s=light&pc=%2351241f" integrity= "" crossorigin="anonymous">
+    <link href="https://fonts.google.com/specimen/Smooch+Sans" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <h1 class="heading">
+        <img class="logo" src="assets/images/Logo.png" alt="logo"> 
+        <br>
+        Sports Whiz
+    </h1>
+
+    <div class="game-area">
+
+    </div>
    
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+        
+    </div>
+
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
