Add html structure to controls area

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
     </h1>
 
     <div class="game-area">
+        <div class="controls-area">
+            <button class="btn btn--big btn-brown">Ball sports</button>
+            <i class="fa-light fa-futbol" style="color: #51241f;"></i>
+            <button class="btn btn--big btn-violet">Racquet sports</button>
+            <i class="fa-solid fa-racquet" style="color: #511f51;"></i>
+            <button class="btn btn--big btn-green">Athletic sports</button>
+            <i class="fa-regular fa-person-running-fast" style="color: #20511f;"></i>
+            
+        </div>
+        <div class="question-area">
+         <span id="question"></span>
+         <span></span>
+         <span></span>
+         <p class="answer-message">Enter Answer:</p>
+         <input id="answer-box" type="text"
 
+        </div>
+        <buttton class="btn btn--gray">Submit Answer</button>
     </div>
    
     <div class="score-area">
